--- a/package.json
+++ b/package.json
@@ -4,10 +4,28 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.7.0",
-    "hono": "^4.0.2"
+    "@nlpjs/basic": "^4.27.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "dotenv": "^16.4.4",
+    "drizzle-orm": "^0.29.3",
+    "drizzle-zod": "^0.5.1",
+    "hono": "^4.0.2",
+    "mysql2": "^3.9.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
-    "tsx": "^3.12.2"
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "drizzle-kit": "^0.20.14",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-drizzle": "^0.2.3",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2 ",
+    "eslint-plugin-promise": "^6.1.1",
+    "prettier": "^3.2.5",
+    "tsx": "^3.14.0",
+    "typescript": "^5.3.3"
   }
 }
