--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@hono/node-server": "^1.7.0",
 		"@nlpjs/basic": "^4.27.0",
 		"@typescript-eslint/parser": "^6.21.0",
+		"bcryptjs": "^2.4.3",
 		"dotenv": "^16.4.4",
 		"drizzle-orm": "^0.29.3",
 		"drizzle-zod": "^0.5.1",
@@ -15,6 +16,7 @@
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
+		"@types/bcryptjs": "^2.4.6",
 		"@types/node": "^20.11.17",
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
 		"drizzle-kit": "^0.20.14",
