--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
+		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/node": "^20.11.19",
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
